--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			<div class="aboutpage-body-content">
 				<div class="about-article row">
 					<div class="About-Text col-5">
-						<article> Chill 'N' Chat provides an event where allows international students come and make new friends, exchange culture and create meaningful relationships. We specifically focus on face-to-face connections, to help participants dispel feelings of loneliness, self-isolated, and gain a great opportunity to craft sense of belongings for our customers. People, feel free to come, chill and chat !!!. </article>
+						<article> Chill 'N' Chat provides an event that allows international students to come and make new friends, exchange culture, and create meaningful relationships. We specifically focus on face-to-face connections, to help participants dispel feelings of loneliness, and self-isolated, and gain a great opportunity to craft a sense of belongings for our customers. People, feel free to come, chill and chat !!!.</article>
 					</div>
 					<div class="About-image col-7">
 						<img src="Images/About1.jpeg" class="img-fluid">
@@ -111,7 +111,7 @@
 						<img src="Images/About2.jpeg" class="img-fluid">
 					</div>
 					<div class="col-5">
-						<article> In an event, Chill 'N' Chat will brings many activities to you. First, a mismatch sessions where you can match with another participants randomly. Then you and your match can talk, exchange culture, share hobbies and experiences of each other. We will also provides some mini-games for your match, whiuch will help you break the ice and easier to know more about each other. In addition, you can choose to change your match, or continue with your match after a session. It's up to you. Next, During the event, we will have some mini-games, quizzes or riddles for our participants to gain more understand about Australia. And indeed, there will be a prize for the winner. Otherwise, we will provides some addition services for customers to entertain and chill like drinks, music, ... </article>
+						<article> In an event, Chill 'N' Chat will bring many activities to you. First, mismatch sessions where you can match with another participant randomly. Then you and your match can talk, exchange culture, and share hobbies and experiences with each other. We will also provide some mini-games for your match, which will help you break the ice and easier to know more about each other. In addition, you can choose to change your match, or continue with your match after a session. It's up to you. Next, During the event, we will have some mini-games, quizzes, or riddles for our participants to gain more understanding of Australia. And indeed, there will be a prize for the winner. Otherwise, we will provide some additional services for customers to entertain and chill like drinks, music, ...</article>
 					</div>
 				</div>
 			</div>
